fix input boxes on IE

--- a/app/assets/stylesheets/util.css.scss
+++ b/app/assets/stylesheets/util.css.scss
@@ -14,6 +14,11 @@ input.placeholder, textarea.placeholder {
   color: #aaa;
 }
 
+::-ms-clear {
+  width: 0;
+  height: 0;
+}
+
 #alert_messages {
   text-align: center;
 }
